<resources>
    <string name="app_name">Fakarny</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tripName">"Trip name "</string>
    <string name="start">Start Point</string>
    <string name="ena">End Point</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="addTrip">Add Trip</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_History">History</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_login">Logout</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="title_activity_new_trip">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="oneWay">One Way Trip</string>
    <string name="roundTrip">Round Trip</string>
    <string name="upcoming_trip_name">Trip Name</string>
    <string name="upcoming_trip_date">25-12-2021</string>
    <string name="upcoming_trip_time">11:25 AM</string>
    <string name="upcoming_trip_way">Round</string>
    <string name="upcoming_trip_start">Cairo</string>
    <string name="upcoming_trip_end">Aswan</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="at">at</string>
    <string name="delete">Delete</string>
    <string name="Type" />
    <string name="type">Type</string>
    <string name="startTeip">Start</string>
    <string name="title_activity_history_maps">Map</string>
    <string name="notes">Notes</string>
    <string name="fakarny">F A K A R N Y</string>
    <string name="repeat">Repeat</string>
    <string name="upcomingFrag">Upcoming</string>
    <string name="history_Frag">History</string>
    <string name="No_Repeat">No Repeat</string>
    <string name="Repeat_Daily">Repeat Daily</string>
    <string name="Repeat_Weekly">Repeat Weekly</string>
    <string name="Repeat_Monthly">Repeat Monthly</string>
    <string name="One_Way_Trip">One Way Trip</string>
    <string name="Round_Trip">Round Trip</string>
    <string name="mshwary"></string>
    <string name="start_btn_alertDialog">Start</string>
    <string name="snooze_btn_alertDialog">Snooze</string>
    <string name="cancel_btn_alertDialog">Cancel</string>
    <string name="reminder_title_alertDialog">Reminder</string>
    <string name="msg_alertDialog">Is this what you intended to do?</string>
    <string name="add_note">Add Note</string>
    <string name="new_trip">New Trip</string>
    <string name="demo_start_point">To set start point</string>
    <string name="demo_add">To Add new trip</string>
    <string name="chart_info_textVi">2020</string>
    <string name="finish"><![CDATA[Finish >>]]></string>
    <string name="skip">Skip</string>
    <string name="time_card">At</string>
    <string name="trip_alarm_title">Reminder for Trip</string>
    <string name="chart_description">Distance in KM per Month</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="april">Aprl</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="Logout">Logout</string>
    <string name="logout_ms">Are you sure you want to logout?\\nif you did not synchronized your notes you will lose it</string>
    <string name="yes_i_am">yes I am sure</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="edit_ms">you want to Edit this Trip ?</string>
    <string name="edit">Edit</string>
    <string name="delete_ms">Are you sure you want to delete this Trip ?</string>
    <string name="history_trip_map_start">Start</string>
    <string name="history_trip_map_end">End</string>
</resources>