<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="22dp">

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/txtFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/from" />

            <TextView
                android:id="@+id/txtTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/to" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/txtType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/type" />

            <Button
                android:id="@+id/btnNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:textSize="10sp"
                android:layout_marginBottom="10dp"
                android:text="@string/notes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/extName"
                    android:layout_width="0dp"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/txtState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="2"
                    android:text="TextView" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtFromVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/txtToVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <TextView
                    android:id="@+id/txtDateVal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="3"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_weight=".5"
                    android:text="@string/at" />

                <TextView
                    android:id="@+id/txtTimeVal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_weight="2.5"
                    android:text="TextView" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtTypeVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:text="TextView" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/delete" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>