<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewTripActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTname"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/tripName" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:inputType="textAutoCorrect"
            android:maxLength="18"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/to"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/start" />

        <TextView
            android:id="@+id/editStartPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" Search For Your Start Point"
            android:background="@color/white"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/ic_baseline_search_24" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"

            android:fontFamily="sans-serif-black"
            android:text="@string/ena" />

        <TextView
            android:id="@+id/editEndPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint=" Search For Your End Point"
            android:padding="10dp"
            app:drawableStartCompat="@drawable/ic_baseline_search_24" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/date" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnDate"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_today_24"
                android:foreground="@drawable/ic_baseline_today_24" />

            <Button
                android:id="@+id/btnTime"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/ic_baseline_access_time_24"
                android:foreground="@drawable/ic_baseline_access_time_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textDate"
                android:layout_width="0dp"
                android:textColor="@color/black"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/textTime"
                android:layout_width="0dp"
                android:textColor="@color/black"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ko"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/mo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/repeat"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/moy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:text="@string/type"
                android:textColor="@color/black" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"

                android:layout_weight="1" />

        </LinearLayout>


        <Button
            android:id="@+id/addNewTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button"
            android:fontFamily="sans-serif-black"
            android:text="@string/addTrip"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>